/*
Copyright 2020 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package config;

// Target defines the config schema for a broker subscription target.
message Target {
  // The id of the target. E.g. UID of the trigger resource.
  string id = 1;

  // The name of the target.
  string name = 2;

  // The namespace of the target.
  string namespace = 3;

  // The resolved subscriber URI of the target.
  string subscriber_uri = 4;

  // Optional filters from the trigger.
  map<string, string> filter_attributes = 5;

  // The state of the target.
  // We may add additional intermediate states if needed.
  enum State {
    UNKNOWN = 0;
    READY = 1;
  }
  State state = 6;

  // The Pubsub topic name for retrying the events.
  string retry_topic = 7;

  // The Pubsub subscription name for retrying the events.
  string retry_subscription = 8;

  // The broker name that the trigger is referencing.
  string broker = 9;
}

// NamespacedTargets is the collection of targets grouped by namespaces.
message NamespacedTargets {
  map<string, Target> names = 1;
}

// TargetsConfig is the collection of all Targets.
message TargetsConfig {
  map<string, NamespacedTargets> namespaces = 1;
}